--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="fr">
+<html lang="fr" translate="no">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google" content="notranslate">
     <link rel="icon" type="image/svg+xml" href="/dev.png" />
     <link href="/src/tailwind.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Randy Porfolio</title>
+    <title translate="no">Randy Portfolio</title>
   </head>
-  <body >
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
